Create reusable button components

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,6 +5,10 @@ main {
     -moz-osx-font-smoothing: grayscale;
   }
 
+body {
+  background: $background-main-color;
+}
+
 
 body {
   text-align: -webkit-center;
