Update size for mobile first and create header & footer components

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,5 +5,9 @@
 
 @import './base/base';
 
+
+
 @import '../components/Header/header';
+@import '../pages/Home/home';
+@import '../components/Footer/footer';
 @import '../components/Button/button';
