--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,8 +1,12 @@
-.header{
+.footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
 
+
+    padding-top: 1000px;
+
+    
     &--logo{
         width: 48px;
         height: 48px;
