Add Disciplines styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,5 +9,6 @@
 
 @import '../components/Header/header';
 @import '../pages/Home/home';
+@import '../components/Disciplines/disciplines';
 @import '../components/Footer/footer';
 @import '../components/Button/button';
