Add About styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,5 +10,6 @@
 @import '../components/Header/header';
 @import '../pages/Home/home';
 @import '../components/Disciplines/disciplines';
+@import '../components/About/about';
 @import '../components/Footer/footer';
 @import '../components/Button/button';
