--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,17 +6,10 @@ main {
   }
 
 body {
-  background: $background-main-color;
-}
-
-
-body {
   text-align: -webkit-center;
-  margin: auto;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   list-style-type: none;
-}
-
-body{
+  background: $background-main-color;
   margin: 16px 16px;
+  overflow-x: hidden;
 }
