--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,5 +11,7 @@
 @import '../pages/Home/home';
 @import '../components/Disciplines/disciplines';
 @import '../components/About/about';
+@import '../components/Gallery/gallery';
+@import '../components/Projects/projects';
 @import '../components/Footer/footer';
 @import '../components/Button/button';
