--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,5 +13,6 @@
 @import '../components/About/about';
 @import '../components/Gallery/gallery';
 @import '../components/Projects/projects';
+@import '../components/BookMe/bookme';
 @import '../components/Footer/footer';
 @import '../components/Button/button';
