--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -2,11 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-
-    padding-top: 1000px;
-
-    
+    margin-top: 40px;
     &--logo{
         width: 48px;
         height: 48px;
