Work the responsive

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -3,6 +3,7 @@ main {
     max-width: 1440px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
   }
 
 body {
