Add tablette responsive

--- a/src/components/Disciplines/_disciplines.scss
+++ b/src/components/Disciplines/_disciplines.scss
@@ -95,6 +95,18 @@
     display: flex;
     flex-direction: column;
     gap: 25px 0px;
+
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+        display: flex;
+    }
+
+}
+
+.bloc-1 {
+    display: flex;
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+        display: flex;
+    }
 }
 
 .bloc-1--container {
@@ -102,15 +114,36 @@
     flex-direction: column;
     gap: 25px 0px;
 
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+        display: flex;
+        flex-direction: row;
+        gap: 25px 25px;
+    }
+
     &__1{
         display: flex;
         justify-content: center;
-        gap: 0px 25px;
+        flex-direction: column;
+        gap: 25px 25px;
+
+        @media screen and (min-width: map-get($breakpoint, tablette)) {
+            display: flex;
+        }
     }
+}
+
+.bloc-ui-app{
+    display: flex;
+    gap: 0px 25px;
 }
 
 .bloc-2{
     display: flex;
     flex-direction: column;
     gap: 25px 0px;
+
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+        flex-direction: row;
+        gap: 25px 25px;
+    }
 }
