--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -11,6 +11,17 @@ body {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   list-style-type: none;
   background: $background-main-color;
-  margin: 16px 16px;
   overflow-x: hidden;
+  margin: 16px 0px 16px 0px;
+}
+
+.header,
+.footer,
+.section-1,
+.section-2,
+.section-3,
+.section-4,
+.section-5
+{
+  margin: 0px 16px 0px 16px;
 }
