--- a/src/sass/utils/_typography.scss
+++ b/src/sass/utils/_typography.scss
@@ -32,4 +32,9 @@
     font-weight: 500;
     font-size: 16px;
     color: $MediumBrown;
+
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+      font-size: 18px;
+      line-height: 28px;
+  }
 };
