Finish the responsive for tablette

--- a/src/components/Gallery/_gallery.scss
+++ b/src/components/Gallery/_gallery.scss
@@ -4,6 +4,12 @@
     gap: 0px 15px;
     overflow-x: hidden;
     margin: 32px -16px 32px -16px;
+
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+        margin-top: 56px;
+        margin-bottom: 56px;
+        gap: 0px 30px;
+    }
 }
 
 .slider__left-image,
@@ -12,6 +18,11 @@
     width: 270px;
     height: 180px;
     border-radius: 10px;
+
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+        width: 540px;
+        height: 360px;
+    }
 }
 
 .btnGallery{
