--- a/src/components/About/_about.scss
+++ b/src/components/About/_about.scss
@@ -2,6 +2,10 @@
     margin-top: 100px;
 
     @media screen and (min-width: map-get($breakpoint, tablette)) {
+        margin-top: 120px;
+    }
+
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
         display: flex;
         position: relative;
         justify-content: center;
