--- a/src/components/BookMe/_bookme.scss
+++ b/src/components/BookMe/_bookme.scss
@@ -5,13 +5,23 @@
     padding: 49px 24px 48px 24px;
     margin-top: 100px;
 
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+       margin-top: 120px;
+       padding: 56px 75px 56px 75px;
+    }
+
     & h2 {
         font-style: normal;
         font-weight: 700;
         font-size: 26px;
         line-height: 33px;
         text-align: center;
-        color: $White
+        color: $White;
+
+        @media screen and (min-width: map-get($breakpoint, tablette)) {
+           font-size: 32px;
+           line-height: 40px;
+        }
     }
 
     & p {
@@ -21,5 +31,10 @@
         text-align: center;
         color: $White;
         margin: 24px 0px 24px 0px;
+
+        @media screen and (min-width: map-get($breakpoint, tablette)) {
+            line-height: 28px;
+            margin: 26px 50px 26px 50px;
+         }
     }
 }
