--- a/src/components/Disciplines/_disciplines.scss
+++ b/src/components/Disciplines/_disciplines.scss
@@ -2,6 +2,10 @@
     margin-top: 32px;
     display: flex;
     justify-content: center;
+
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+        margin-top: 64px;
+    }
 }
 
 .Cube{
