--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -3,8 +3,14 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
+
     &--logo{
         width: 48px;
         height: 48px;
+
+        @media screen and (min-width: map-get($breakpoint, tablette)) {
+            width: 64px;
+            height: 64px;
+        }
     }
 }
