--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,11 +1,23 @@
 .section-1{
     margin-top: 34px;
 
+    @media screen and (min-width: map-get($breakpoint, tablette)) {
+        margin-top: 64px;
+    }
+
     &--headling{
         margin-bottom: 16px;
+
+        @media screen and (min-width: map-get($breakpoint, tablette)) {
+            margin-bottom: 27px;
+        }
     }
 
     &--paragraph{
         margin: 0px 29px 0px 29px;
+
+        @media screen and (min-width: map-get($breakpoint, tablette)) {
+            margin: 0px 80px 0px 80px;
+        }
     }
 }
