--- a/src/sass/utils/_typography.scss
+++ b/src/sass/utils/_typography.scss
@@ -19,6 +19,11 @@
       font-size: 44px;
       line-height: 55px;
   }
+
+   @media screen and (min-width: map-get($breakpoint, laptop-L)) {
+    font-size: 44px;
+    line-height: 55px;
+ }
   
 };
 
