--- a/src/components/About/_about.scss
+++ b/src/components/About/_about.scss
@@ -3,16 +3,20 @@
 
     @media screen and (min-width: map-get($breakpoint, tablette)) {
         margin-top: 120px;
-    }
-
-    @media screen and (min-width: map-get($breakpoint, tablette)) {
         display: flex;
         position: relative;
         justify-content: center;
         align-items: center;
         gap: 0px 69px;
-        margin-left: -65px;
+        margin-left: -45px;
         margin: none;
+    }
+
+    @media screen and (min-width: map-get($breakpoint, laptop-L)) {
+        margin-top: 136px;
+        gap: 0px 125px;
+        margin-left: 154px;
+        margin-right: 154px;
     }
 
     &__bloc{
@@ -21,6 +25,15 @@
             flex-direction: column;
             align-items: flex-start;
             max-width: 340px;
+        }
+
+        @media screen and (min-width: map-get($breakpoint, laptop-L)) {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            max-width: none;
+            margin-right: 0px;
+            margin-left: 0px;
         }
     }
 
@@ -31,6 +44,11 @@
         @media screen and (min-width: map-get($breakpoint, tablette)) {
             width: 364px;
             height: 364px;
+        }
+
+        @media screen and (min-width: map-get($breakpoint, laptop-L)) {
+            width: 445px;
+            height: 445px;
         }
     }
 
@@ -50,6 +68,13 @@
             font-size: 32px;
             line-height: 40px;
         }
+
+        @media screen and (min-width: map-get($breakpoint, tablette)) {
+            text-align: left;
+            font-size: 40px;
+            line-height: 50px;
+            margin-right: 10px;
+        }
     }
 
     & p{
@@ -57,6 +82,10 @@
 
         @media screen and (min-width: map-get($breakpoint, tablette)) {
             text-align: left;
+        }
+
+        @media screen and (min-width: map-get($breakpoint, laptop-L)) {
+            margin-right: 10px;
         }
     }
 }
