--- a/src/components/Gallery/_gallery.scss
+++ b/src/components/Gallery/_gallery.scss
@@ -39,6 +39,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        transition: background 0.2s ease-in-out;
+
+        &:hover{
+            background-color: $GalacticBlue;
+        }
 
         & img{
             width: 14.81px;
