--- a/src/components/Projects/_projects.scss
+++ b/src/components/Projects/_projects.scss
@@ -7,6 +7,10 @@
         margin-top: 120px;
     }
 
+    @media screen and (min-width: map-get($breakpoint, laptop-L)) {
+        margin-top: 88px;
+    }
+
     & h2 {
         font-style: normal;
         font-weight: 700;
