--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -13,6 +13,10 @@ body {
   background: $background-main-color;
   overflow-x: hidden;
   margin: 16px 0px 16px 0px;
+
+  @media screen and (min-width: map-get($breakpoint, tablette)) {
+    margin: 34px 0px 34px 0px;
+ }
 }
 
 .header,
@@ -20,8 +24,15 @@ body {
 .section-1,
 .section-2,
 .section-3,
-.section-4,
 .section-5
 {
   margin: 0px 16px 0px 16px;
+
+  @media screen and (min-width: map-get($breakpoint, tablette)) {
+    margin: 0px 40px 0px 40px;
+ }
+
+  @media screen and (min-width: map-get($breakpoint, laptop-L)) {
+    margin: 0px 165px 0px 165px;
+ }
 }
