--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -11,6 +11,7 @@
 
     &--headling{
         margin-bottom: 16px;
+        text-align: center;
 
         @media screen and (min-width: map-get($breakpoint, tablette)) {
             margin-bottom: 27px;
