--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -24,6 +24,7 @@
 
     &--paragraph{
         margin: 0px 29px 0px 29px;
+        text-align: center;
 
         @media screen and (min-width: map-get($breakpoint, tablette)) {
             margin: 0px 80px 0px 80px;
