--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -11,6 +11,7 @@ body {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   list-style-type: none;
   background: $background-main-color;
+  height: 100%;
   overflow-x: hidden;
   margin: 16px 0px 16px 0px;
 
