--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,6 +4,7 @@ main {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    background: $background-main-color;
   }
 
 body {
@@ -11,7 +12,6 @@ body {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   list-style-type: none;
   background: $background-main-color;
-  height: 100%;
   overflow-x: hidden;
   margin: 16px 0px 16px 0px;
 
