--- a/src/components/About/_about.scss
+++ b/src/components/About/_about.scss
@@ -34,6 +34,7 @@
             max-width: none;
             margin-right: 0px;
             margin-left: 0px;
+            margin-bottom: 40px
         }
     }
 
